# AETHER

./: .gitignore  ARCHITECTURE.md  BUILD_REPORT.md  INSTALL.md  QA_REPORT.md  README.md  __init__.py  _test_gpu.py  _test_ollama.py  _test_ollama2.py  _test_ollama3.py  _test_ollama4.py  _test_ollama5.py  _test_ollama6.py  _test_ollama7.py  _test_ollama8.py  _test_ollama9.py  app.py  package-lock.json  package.json  requirements.txt  test_title_gen.py
core/: agent_runtime.py  application.py  assistant.py  bridge.py  conversation.py  execution.py  initializer.py  intent_engine.py  intent_router.py  memory.py  models.py  observation_engine.py  permission_manager.py  planner.py  reasoning_engine.py  reflection_engine.py  security.py  tool_registry.py  vision.py  voice.py
data/: aether.db  aether.db-shm  aether.db-wal
database/: db_manager.py
forgeops/: cli.py
forgeops/commands/: init.py  lint.py
models/: __init__.py  plugin_base.py  tool_base.py
plugins/: automation.py  browser.py  docker.py  filesystem.py  github.py  manager.py  system.py  terminal.py  vscode.py
plugins/browser/: plugin.py
plugins/docker/: plugin.py
plugins/executor/: plugin.py
resources/: qml.qrc
services/: automation.py  config.py  conversation_service.py  database.py  file_operations.py  memory_service.py  ollama.py  ollama_service.py  plugin_manager.py  system_monitor.py  voice.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_core.py
ui/: bridge.py  main_window.py  resources.py  splash.py  state.py
ui/qml/: Chat.qml  (+24 more)
utils/: logging_config.py
(+9 files in other folders)
